--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Food Ninja</title>
+    <title>Junior Learner</title>
     <!-- materialize icons, css & js -->
     <link type="text/css" href="/css/materialize.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -23,7 +23,7 @@
     <!-- top nav -->
     <nav class="z-depth-0">
         <div class="nav-wrapper container">
-            <a href="/">Food<span>Ninja</span></a>
+            <a href="/">Junior<span>Learner</span></a>
             <span class="right grey-text text-darken-1">
             <ul class="cateogory-items">
                 <% for(const item of categories) { %>
@@ -63,27 +63,7 @@
 
     </div>
 
-
-
-    <!-- <script src="https://www.gstatic.com/firebasejs/5.11.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/5.11.0/firebase-firestore.js"></script> -->
-
-    <!-- <script>
-        // Initialize Firebase
-        var config = {
-            apiKey: "AIzaSyDuDGcpHGU-Sx1Hla3wYwZvXbjeKpHqPjA",
-            authDomain: "net-ninja-pwa.firebaseapp.com",
-            databaseURL: "https://net-ninja-pwa.firebaseio.com",
-            projectId: "net-ninja-pwa",
-            storageBucket: "net-ninja-pwa.appspot.com",
-            messagingSenderId: "1008745109838"
-        };
-        firebase.initializeApp(config);
-        const db = firebase.firestore();
-    </script> -->
-
     <script src="/js/app.js"></script>
-    <script src="/js/db.js"></script>
     <script src="/js/ui.js"></script>
 </body>
 
