--- a/public/assets/main.css
+++ b/public/assets/main.css
@@ -17,6 +17,24 @@
 .relative {
   position: relative;
 }
+.input {
+  width: 100%;
+  box-sizing: border-box;
+  outline: none;
+  border: 1px solid rgba(171, 171, 171, 0.4196078431);
+  padding: 10px;
+  margin: 7px 0px;
+  color: #5b5b5b;
+  border-radius: 5px;
+}
+.label {
+  color: #5b5b5b;
+  font-weight: 500;
+}
+.btn-disable {
+  background: #a1a1a1;
+  pointer-events: none;
+}
 
 /* views/styles/app.scss */
 :root {
@@ -57,6 +75,8 @@ li {
 }
 .card {
   padding: 2em;
+  box-shadow: 0 2px 12px 0px rgba(128, 128, 128, 0.29);
+  border-radius: 8px;
 }
 .read-the-docs {
   color: #888;
@@ -178,6 +198,10 @@ li {
   color: white;
   width: 20px;
 }
+.extra-menu .icon-item .auth-avatar img {
+  width: 25px;
+  border-radius: 100%;
+}
 .extra-menu .menu-bars-icon {
   display: none;
   width: 22px;
@@ -201,23 +225,24 @@ li {
   cursor: pointer;
   background-image: linear-gradient(73deg, #6f80ff, #30ff79);
 }
+.auth-avatar:hover .auth-menu {
+  display: block;
+}
+.auth-menu {
+  display: none;
+  position: absolute;
+  background: white;
+  top: 30px;
+  right: 0px;
+  width: 150px;
+  padding: 10px !important;
+}
 
 /* views/pages/auth/styles.scss */
 .login-form {
-  box-shadow: 0 2px 12px 0px rgba(128, 128, 128, 0.29);
-  border-radius: 8px;
   max-width: 500px;
   margin: 100px auto;
   padding: 15px;
-}
-.login-form input {
-  width: 100%;
-  box-sizing: border-box;
-  outline: none;
-  border: 1px solid rgba(171, 171, 171, 0.4196078431);
-  padding: 10px;
-  margin: 7px 0px;
-  border-radius: 5px;
 }
 
 /* views/index.css */
