--- a/views/styles/app.scss
+++ b/views/styles/app.scss
@@ -40,6 +40,8 @@ ul, li{margin: 0; padding: 0; list-style: none}
 
 .card {
   padding: 2em;
+  box-shadow: 0 2px 12px 0px rgb(128 128 128 / 29%);
+  border-radius: 8px;
 }
 
 .read-the-docs {
@@ -175,6 +177,12 @@ ul, li{margin: 0; padding: 0; list-style: none}
       color: white;
       width: 20px;
     }
+    .auth-avatar{
+      img{
+        width: 25px;
+        border-radius: 100%;
+      }
+    }
   }
 
   .menu-bars-icon{
@@ -204,4 +212,22 @@ ul, li{margin: 0; padding: 0; list-style: none}
   border-radius: 4px;
   cursor: pointer;
   background-image: linear-gradient(73deg, #6f80ff, #30ff79);;
+}
+
+.auth-avatar{
+  &:hover{
+    .auth-menu{
+      display: block;
+    }
+  }
+}
+
+.auth-menu{
+  display: none;
+  position: absolute;
+  background: white;
+  top: 30px;
+  right: 0px;
+  width: 150px;
+  padding: 10px !important;
 }
