--- a/views/styles/common.scss
+++ b/views/styles/common.scss
@@ -20,7 +20,8 @@
   color: #5b5b5b;
   font-weight: 500;
 }
-.btn-disable{
-  background: #a1a1a1;
+.btn-disable {
+  background: #a1a1a175 !important;
   pointer-events: none;
+  color: #6c6c6c !important;
 }
